--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -4,6 +4,9 @@ FROM frappe/erpnext-worker:${FRAPPE_BRANCH}
 ARG GITHUB_OWNER=msf4-0 			# you could give a default value as well
 ENV GITHUB_OWNER=$GITHUB_OWNER
 
+# Copy custom ERPNext changes
+COPY ./custom_erpnext /home/frappe/frappe-bench/apps/erpnext
+
 RUN install_app metabase_integration https://github.com/${GITHUB_OWNER}/ERPNext-Metabase-Integration master && \
   install_app erpnext_telegram_integration https://github.com/${GITHUB_OWNER}/ERPNext-Telegram-Integration master && \
   install_app frepple https://github.com/${GITHUB_OWNER}/ERPNext-Frepple-Enhanced-Integration main && \
