--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,6 @@ services:
       - "--certificatesresolvers.excelresolver.acme.email=${LETSENCRYPT_EMAIL}"
       - "--certificatesresolvers.excelresolver.acme.storage=/letsencrypt/acme.json"
     labels:
-      # enable traefik
       - "traefik.enable=true"
     ports:
       - "${ERPNEXT_SERVER_PORT}:80"
@@ -24,7 +23,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
 
   custom-erpnext-nginx:
-    image: ${DOCKER_USERNAME}/custom-erpnext-nginx-8:${ERPNEXT_VERSION}
+    image: ${DOCKER_USERNAME}/custom-erpnext-nginx:${ERPNEXT_VERSION}
     restart: on-failure
     environment:
       - FRAPPE_PY=erpnext-python
@@ -44,8 +43,7 @@ services:
       - assets-vol:/assets:rw
 
   erpnext-python:
-    image: ${DOCKER_USERNAME}/custom-erpnext-worker-8:${ERPNEXT_VERSION}
-    #image: shrdc/erpnext-python:version-12
+    image: ${DOCKER_USERNAME}/custom-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     environment:
       - MARIADB_HOST=${MARIADB_HOST}
@@ -67,7 +65,7 @@ services:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
 
   custom-erpnext-worker-default:
-    image: ${DOCKER_USERNAME}/custom-erpnext-worker-8:${ERPNEXT_VERSION}
+    image: ${DOCKER_USERNAME}/custom-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     command: worker
     depends_on:
@@ -77,7 +75,7 @@ services:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
 
   custom-erpnext-worker-short:
-    image: ${DOCKER_USERNAME}/custom-erpnext-worker-8:${ERPNEXT_VERSION}
+    image: ${DOCKER_USERNAME}/custom-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     command: worker
     environment:
@@ -89,7 +87,7 @@ services:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
 
   custom-erpnext-worker-long:
-    image: ${DOCKER_USERNAME}/custom-erpnext-worker-8:${ERPNEXT_VERSION}
+    image: ${DOCKER_USERNAME}/custom-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     command: worker
     environment:
@@ -100,66 +98,19 @@ services:
     volumes:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
 
-  erpnext-schedule:
-    image: ${DOCKER_USERNAME}/custom-erpnext-worker-8:${ERPNEXT_VERSION}
-    restart: on-failure
-    command: schedule
-    depends_on:
-      - redis-queue
-      - redis-cache
-    volumes:
-      - sites-vol:/home/frappe/frappe-bench/sites:rw
-
   redis-cache:
-    image: redis:latest
+    image: redis:alpine
     restart: on-failure
-    volumes:
-      - redis-cache-vol:/data
 
   redis-queue:
-    image: redis:latest
+    image: redis:alpine
     restart: on-failure
-    volumes:
-      - redis-queue-vol:/data
 
   redis-socketio:
-    image: redis:latest
+    image: redis:alpine
     restart: on-failure
-    volumes:
-      - redis-socketio-vol:/data
-
-  mariadb:
-    image: mariadb:10.3
-    restart: on-failure
-    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci', '--skip-character-set-client-handshake']
-    environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-    volumes:
-      - ./frappe-mariadb.cnf:/etc/mysql/conf.d/frappe.cnf
-      - mariadb-vol:/var/lib/mysql
-    ports:
-      - "${MARIADB_SERVER_PORT}:3306"
-
-  site-creator:
-    image: ${DOCKER_USERNAME}/custom-erpnext-worker-8:${ERPNEXT_VERSION}
-    restart: "no"
-    command: new
-    depends_on:
-      - erpnext-python
-    environment:
-      - SITE_NAME=${SITE_NAME}
-      - DB_ROOT_USER=${DB_ROOT_USER}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-      - INSTALL_APPS=${INSTALL_APPS}
-    volumes:
-      - sites-vol:/home/frappe/frappe-bench/sites:rw
 
 volumes:
-  mariadb-vol:
-  redis-cache-vol:
-  redis-queue-vol:
-  redis-socketio-vol:
-  assets-vol:
-  sites-vol:
   cert-vol:
+  sites-vol:
+  assets-vol:
